--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sport Stacking Calculator</title>
+  <title>Sport Stacking Calculators</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -42,7 +42,7 @@
   </style>
 </head>
 <body>
-  <h1>Sport Stacking Calculator</h1>
+  <h1>Sport Stacking Calculators</h1>
   <p style="text-align: center;">(Put 999 if scratch — only valid for Tournament mode)</p>
 
   <label for="mode">Mode:</label>
