--- a/index.html
+++ b/index.html
@@ -1,241 +1,271 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <title>Sport Stacking Calculator</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <title>Sport Stacking Calculators</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Mobile scaling -->
   <style>
-    /* Base styles (desktop and mobile) */
     body {
       font-family: Arial, sans-serif;
-      max-width: 600px;
-      margin: auto;
-      padding: 20px;
-      background: #f9f9f9;
-      color: #333;
-    }
-    h1, h2 {
       text-align: center;
+      margin: 10px;
     }
-    label {
-      font-weight: bold;
+    h1 {
+      margin-bottom: 10px;
     }
-    input[type="number"] {
-      width: 80px;
-      padding: 6px;
+    .mode {
+      display: none;
+      margin-top: 20px;
+    }
+    label, input {
       margin: 5px;
     }
-    select, button {
-      padding: 8px 12px;
-      margin: 8px 5px;
-      font-size: 16px;
+    .inputs {
+      margin: 10px 0;
     }
-    .section {
-      margin-top: 30px;
-      padding: 15px;
-      border: 1px solid #ccc;
-      background: #fff;
+    input[type="number"] {
+      width: 100px;
+      padding: 10px;
+      margin: 5px;
+      text-align: center;
+      font-size: 18px;
     }
-    .result {
-      margin-top: 10px;
-      font-weight: bold;
+    button {
+      margin: 10px;
+      padding: 10px 20px;
+      font-size: 18px;
+      cursor: pointer;
     }
-    .hidden {
-      display: none;
+    #average363Inputs {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
     }
-
-    /* PHONE-ONLY STYLES */
-    @media (max-width: 768px) {
-  .section {
-    text-align: center;
-  }
-
-  .section input[type="number"] {
-    display: block;
-    margin: 10px auto;
-    width: 100%;
-    max-width: 200px;
-    font-size: 18px;
-  }
-}
-      /* Smaller headings on mobile so they fit */
-      h1 { font-size: 24px; }
-      h2 { font-size: 20px; }
+    .stack-input {
+      margin: 6px;
+      font-size: 18px;
+      padding: 10px;
     }
 
-    /* DESKTOP-ONLY STUFF if needed */
-    /*
-    @media (min-width: 769px) {
-      .mobile-only-element { display: none; }
+    /* Mobile tweaks */
+    @media (max-width: 600px) {
+      body {
+        font-size: 18px;
+      }
+      input[type="number"] {
+        width: 90px;
+        font-size: 18px;
+        padding: 10px;
+      }
+      button {
+        font-size: 18px;
+        padding: 12px 24px;
+      }
     }
-    */
   </style>
 </head>
 <body>
-  <h1>Sport Stacking Calculator</h1>
-  <p style="text-align: center;">(Put 999 if scratch — only valid for Tournament mode)</p>
+  <h1>Sport Stacking Calculators</h1>
+  <p>Select a mode below:</p>
 
-  <label for="mode">Mode:</label>
-  <select id="mode" onchange="toggleMode()">
-    <option value="tournament">Tournament (3 times)</option>
+  <select id="modeSelect" onchange="showMode()">
+    <option value="tournament">Tournament</option>
     <option value="single">Single Time</option>
-    <option value="average363">3‑6‑3 Average</option>
+    <option value="average363">3-6-3 Average</option>
   </select>
 
   <!-- Tournament Mode -->
-  <div class="section" id="tournamentSection">
+  <div id="tournament" class="mode">
     <h2>Tournament Mode</h2>
-    <div><label>3‑3‑3:</label>
-      <input type="number" id="t_333_1" step="0.001">
-      <input type="number" id="t_333_2" step="0.001">
-      <input type="number" id="t_333_3" step="0.001">
-    </div>
-    <div><label>3‑6‑3:</label>
-      <input type="number" id="t_363_1" step="0.001">
-      <input type="number" id="t_363_2" step="0.001">
-      <input type="number" id="t_363_3" step="0.001">
-    </div>
-    <div><label>Cycle:</label>
-      <input type="number" id="t_cycle_1" step="0.001">
-      <input type="number" id="t_cycle_2" step="0.001">
-      <input type="number" id="t_cycle_3" step="0.001">
-    </div>
-    <button onclick="calculateTournament()">Calculate</button>
-    <button onclick="resetTournament()">Reset</button>
-    <div class="result" id="tournamentResults"></div>
+    <p>(Put 999 if scratch)</p>
+    <form id="tournamentForm">
+      <div class="inputs">
+        <h3>3-3-3</h3>
+        <input type="number" step="0.001" id="t333_1" placeholder="x.xxx">
+        <input type="number" step="0.001" id="t333_2" placeholder="x.xxx">
+        <input type="number" step="0.001" id="t333_3" placeholder="x.xxx">
+      </div>
+      <div class="inputs">
+        <h3>3-6-3</h3>
+        <input type="number" step="0.001" id="t363_1" placeholder="x.xxx">
+        <input type="number" step="0.001" id="t363_2" placeholder="x.xxx">
+        <input type="number" step="0.001" id="t363_3" placeholder="x.xxx">
+      </div>
+      <div class="inputs">
+        <h3>Cycle</h3>
+        <input type="number" step="0.001" id="tcycle_1" placeholder="x.xxx">
+        <input type="number" step="0.001" id="tcycle_2" placeholder="x.xxx">
+        <input type="number" step="0.001" id="tcycle_3" placeholder="x.xxx">
+      </div>
+      <button type="button" onclick="calculateTournament()">Calculate</button>
+      <button type="button" onclick="confirmReset('tournament')">Reset</button>
+    </form>
+    <div id="tournamentResult"></div>
   </div>
 
   <!-- Single Time Mode -->
-  <div class="section hidden" id="singleSection">
+  <div id="single" class="mode">
     <h2>Single Time Mode</h2>
-    <div><label>3‑3‑3:</label><input type="number" id="s_333" step="0.001"></div>
-    <div><label>3‑6‑3:</label><input type="number" id="s_363" step="0.001"></div>
-    <div><label>Cycle:</label><input type="number" id="s_cycle" step="0.001"></div>
-    <button onclick="calculateSingle()">Calculate</button>
-    <button onclick="resetSingle()">Reset</button>
-    <div class="result" id="singleResults"></div>
+    <form id="singleForm">
+      <div class="inputs">
+        <label>3-3-3:</label>
+        <input type="number" step="0.001" id="s333" placeholder="x.xxx">
+      </div>
+      <div class="inputs">
+        <label>3-6-3:</label>
+        <input type="number" step="0.001" id="s363" placeholder="x.xxx">
+      </div>
+      <div class="inputs">
+        <label>Cycle:</label>
+        <input type="number" step="0.001" id="scycle" placeholder="x.xxx">
+      </div>
+      <button type="button" onclick="calculateSingle()">Calculate</button>
+      <button type="button" onclick="confirmReset('single')">Reset</button>
+    </form>
+    <div id="singleResult"></div>
   </div>
 
-  <!-- 3‑6‑3 Average Mode -->
-  <div class="section hidden" id="average363Section">
-    <h2>3‑6‑3 Average Calculator</h2>
-    <label>Average of <input id="numTimes" type="number" min="1" style="width: 60px;"> times</label>
-    <button onclick="generate363Inputs()">Go</button>
-    <div id="inputFields"></div>
-    <button onclick="calculateAverage363()">Calculate Average</button>
-    <button onclick="resetAverage363()">Reset</button>
-    <div class="result" id="averageResult"></div>
+  <!-- 3-6-3 Average Calculator -->
+  <div id="average363" class="mode">
+    <h2>3-6-3 Average Calculator</h2>
+    <form id="average363Form">
+      <label>Average of
+        <input type="number" id="numTimes" min="1" max="50" value="3" onchange="generate363Inputs()">
+        times
+      </label>
+      <div id="average363Inputs"></div>
+      <button type="button" onclick="calculateAverage363()">Calculate</button>
+      <button type="button" onclick="confirmReset('average363')">Reset</button>
+    </form>
+    <div id="average363Result"></div>
   </div>
 
   <script>
-    function toggleMode() {
-      const mode = document.getElementById('mode').value;
-      document.getElementById('tournamentSection').classList.add('hidden');
-      document.getElementById('singleSection').classList.add('hidden');
-      document.getElementById('average363Section').classList.add('hidden');
-      if (mode === 'tournament') {
-        document.getElementById('tournamentSection').classList.remove('hidden');
-      } else if (mode === 'single') {
-        document.getElementById('singleSection').classList.remove('hidden');
-      } else {
-        document.getElementById('average363Section').classList.remove('hidden');
+    // Show mode
+    function showMode() {
+      let modes = document.querySelectorAll('.mode');
+      modes.forEach(m => m.style.display = "none");
+      let selected = document.getElementById("modeSelect").value;
+      if (selected) {
+        document.getElementById(selected).style.display = "block";
       }
-      resetTournament();
-      resetSingle();
-      resetAverage363();
     }
 
-    function bestValidTime(inputs) {
-      const valid = inputs.map(Number).filter(n => n !== 999 && !isNaN(n));
-      return valid.length ? Math.min(...valid) : null;
+    // Confirm Reset
+    function confirmReset(mode) {
+      if (confirm("Are you sure you want to reset? All times will be cleared.")) {
+        if (mode === "tournament") resetTournament();
+        else if (mode === "single") resetSingle();
+        else if (mode === "average363") resetAverage363();
+      }
     }
 
+    // Reset functions
+    function resetTournament() {
+      document.getElementById("tournamentForm").reset();
+      document.getElementById("tournamentResult").innerHTML = "";
+    }
+    function resetSingle() {
+      document.getElementById("singleForm").reset();
+      document.getElementById("singleResult").innerHTML = "";
+    }
+    function resetAverage363() {
+      document.getElementById("average363Form").reset();
+      document.getElementById("average363Result").innerHTML = "";
+      document.getElementById("average363Inputs").innerHTML = "";
+    }
+
+    // Tournament Calculation
     function calculateTournament() {
-      const best333 = bestValidTime([
-        document.getElementById('t_333_1').value,
-        document.getElementById('t_333_2').value,
-        document.getElementById('t_333_3').value
-      ]);
-      const best363 = bestValidTime([
-        document.getElementById('t_363_1').value,
-        document.getElementById('t_363_2').value,
-        document.getElementById('t_363_3').value
-      ]);
-      const bestCycle = bestValidTime([
-        document.getElementById('t_cycle_1').value,
-        document.getElementById('t_cycle_2').value,
-        document.getElementById('t_cycle_3').value
-      ]);
-
-      let result = '';
-      if (best333 === null || best363 === null || bestCycle === null) {
-        result = 'All‑Around: SCRATCH';
-      } else {
-        const total = (best333 + best363 + bestCycle).toFixed(3);
-        result = `Best 3‑3‑3: ${best333.toFixed(3)}\nBest 3‑6‑3: ${best363.toFixed(3)}\nBest Cycle: ${bestCycle.toFixed(3)}\nAll‑Around: ${total} s`;
+      function bestOfThree(a, b, c) {
+        let times = [a, b, c].map(Number);
+        if (times.every(t => t === 999)) return "Scratch";
+        times = times.filter(t => t !== 999);
+        return Math.min(...times).toFixed(3);
       }
-      document.getElementById('tournamentResults').innerText = result;
+      let best333 = bestOfThree(
+        document.getElementById("t333_1").value,
+        document.getElementById("t333_2").value,
+        document.getElementById("t333_3").value
+      );
+      let best363 = bestOfThree(
+        document.getElementById("t363_1").value,
+        document.getElementById("t363_2").value,
+        document.getElementById("t363_3").value
+      );
+      let bestCycle = bestOfThree(
+        document.getElementById("tcycle_1").value,
+        document.getElementById("tcycle_2").value,
+        document.getElementById("tcycle_3").value
+      );
+
+      let resultDiv = document.getElementById("tournamentResult");
+      if (best333 === "Scratch" || best363 === "Scratch" || bestCycle === "Scratch") {
+        resultDiv.innerHTML = `<p>Overall: Scratch</p>
+                               <p>3-3-3: ${best333}</p>
+                               <p>3-6-3: ${best363}</p>
+                               <p>Cycle: ${bestCycle}</p>`;
+      } else {
+        let overall = (parseFloat(best333) + parseFloat(best363) + parseFloat(bestCycle)).toFixed(3);
+        resultDiv.innerHTML = `<p>Overall: ${overall}</p>
+                               <p>3-3-3: ${best333}</p>
+                               <p>3-6-3: ${best363}</p>
+                               <p>Cycle: ${bestCycle}</p>`;
+      }
     }
 
+    // Single Mode Calculation
     function calculateSingle() {
-      const t333 = parseFloat(document.getElementById('s_333').value);
-      const t363 = parseFloat(document.getElementById('s_363').value);
-      const cycle = parseFloat(document.getElementById('s_cycle').value);
+      let s333 = parseFloat(document.getElementById("s333").value);
+      let s363 = parseFloat(document.getElementById("s363").value);
+      let scycle = parseFloat(document.getElementById("scycle").value);
 
-      let result = '';
-      if (isNaN(t333) || isNaN(t363) || isNaN(cycle)) {
-        result = 'All‑Around: SCRATCH';
-      } else {
-        const total = (t333 + t363 + cycle).toFixed(3);
-        result = `3‑3‑3: ${t333.toFixed(3)}\n3‑6‑3: ${t363.toFixed(3)}\nCycle: ${cycle.toFixed(3)}\nAll‑Around: ${total} s`;
+      if (isNaN(s333) || isNaN(s363) || isNaN(scycle)) {
+        document.getElementById("singleResult").innerHTML = "<p>Please enter all times.</p>";
+        return;
       }
-      document.getElementById('singleResults').innerText = result;
+      let overall = (s333 + s363 + scycle).toFixed(3);
+      document.getElementById("singleResult").innerHTML =
+        `<p>Overall: ${overall}</p>
+         <p>3-3-3: ${s333.toFixed(3)}</p>
+         <p>3-6-3: ${s363.toFixed(3)}</p>
+         <p>Cycle: ${scycle.toFixed(3)}</p>`;
     }
 
+    // 3-6-3 Average
     function generate363Inputs() {
-      const num = parseInt(document.getElementById('numTimes').value);
-      const container = document.getElementById('inputFields');
-      container.innerHTML = '';
-      if (isNaN(num) || num <= 0) return;
+      let num = document.getElementById("numTimes").value;
+      let inputsDiv = document.getElementById("average363Inputs");
+      inputsDiv.innerHTML = "";
       for (let i = 0; i < num; i++) {
-        const input = document.createElement('input');
-        input.type = 'number';
-        input.step = '0.001';
-        input.placeholder = `Time ${i+1}`;
-        input.className = 'avgInput';
-        container.appendChild(input);
+        let input = document.createElement("input");
+        input.type = "number";
+        input.step = "0.001";
+        input.placeholder = "x.xx";
+        input.classList.add("stack-input");
+        input.id = "a363_" + i;
+        inputsDiv.appendChild(input);
       }
     }
 
     function calculateAverage363() {
-      const inputs = document.querySelectorAll('.avgInput');
-      const values = Array.from(inputs).map(i => parseFloat(i.value)).filter(n => !isNaN(n));
-      if (!values.length) {
-        document.getElementById('averageResult').innerText = 'No valid times entered.';
+      let num = document.getElementById("numTimes").value;
+      let times = [];
+      for (let i = 0; i < num; i++) {
+        let val = parseFloat(document.getElementById("a363_" + i).value);
+        if (!isNaN(val)) times.push(val);
+      }
+      if (times.length === 0) {
+        document.getElementById("average363Result").innerHTML = "<p>Please enter times.</p>";
         return;
       }
-      const avg = (values.reduce((a,b) => a+b) / values.length).toFixed(2);
-      document.getElementById('averageResult').innerText = `Average 3‑6‑3: ${avg} s`;
+      let avg = (times.reduce((a, b) => a + b, 0) / times.length).toFixed(2);
+      document.getElementById("average363Result").innerHTML = `<p>Average: ${avg}</p>`;
     }
 
-    function resetTournament() {
-      ['t_333_1','t_333_2','t_333_3','t_363_1','t_363_2','t_363_3','t_cycle_1','t_cycle_2','t_cycle_3']
-        .forEach(id => document.getElementById(id).value = '');
-      document.getElementById('tournamentResults').innerText = '';
-    }
-
-    function resetSingle() {
-      ['s_333','s_363','s_cycle'].forEach(id => document.getElementById(id).value = '');
-      document.getElementById('singleResults').innerText = '';
-    }
-
-    function resetAverage363() {
-      document.getElementById('numTimes').value = '';
-      document.getElementById('inputFields').innerHTML = '';
-      document.getElementById('averageResult').innerText = '';
-    }
-
-    toggleMode(); // initialize view
+    // Default: show Tournament on load
+    document.getElementById("modeSelect").value = "tournament";
+    showMode();
   </script>
 </body>
 </html>
